--- a/.air.toml
+++ b/.air.toml
@@ -5,5 +5,5 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/sorcerer"
   delay = 1000
-  exclude_dir = ["assets", "data", "tmp", "vendor"]
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_dir = ["cmd", "pkg"]
+  include_ext = ["go"]
